# elevated_control

./: .gitignore  .gitmodules  CMakeLists.txt  NOTICE  README.md
.github/workflows/: build.yml  build_and_test.yml
cmake/: elevated_controlConfig.cmake.in
examples/: CMakeLists.txt  basic_usage.cpp  config_verification.cpp  config_verification_helpers.cpp  config_verification_helpers.hpp  elevate_config.yaml  example_config_dir.hpp  flash_actuator.cpp  hand_guided.cpp  joint_limits.yaml  single_motor_test.cpp  spring_adjust.cpp  velocity_commands.cpp
include/elevated_control/: arm_constants.hpp  arm_interface.hpp  arm_types.hpp  config_parsing.hpp  constants.hpp  constants_arm.hpp  dial_normalization.hpp  dynamic_sim.hpp  interface_arm.hpp  interface_base.hpp  interface_single_joint.hpp  joint_admittance.hpp  joint_limits.hpp  single_joint_interface.hpp  somanet_pdo.hpp  spring_adjust.hpp  state_machine.hpp  synapticcon_base.hpp  types.hpp  types_arm.hpp  unit_conversions.hpp  velocity_filter.hpp  wrist_pitch_dial.hpp
src/: arm_interface.cpp  config_parsing.cpp  dynamic_sim.cpp  interface_arm.cpp  interface_base.cpp  interface_single_joint.cpp  joint_admittance.cpp  single_joint_interface.cpp  spring_adjust.cpp  synapticcon_base.cpp  velocity_filter.cpp
test/: CMakeLists.txt  test_config_parsing.cpp  test_config_verification.cpp  test_deadman_mode_change.cpp  test_dial_normalization.cpp  test_joint_admittance.cpp  test_joint_limits.cpp  test_spring_adjust.cpp  test_state_machine.cpp  test_stop.cpp  test_streaming_spring_slot.cpp  test_unit_conversions.cpp  test_velocity_filter.cpp  test_wrist_pitch_dial.cpp
test/resources/: fake_joint.csv  malformed.csv
